--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
 		"react-helmet": "^6.1.0",
 		"recoil": "^0.7.7",
 		"recoil-nexus": "^0.5.0",
-		"sass": "^1.70.0"
+		"sass": "^1.70.0",
+		"vite-plugin-image-optimizer": "^1.1.7"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.55",
@@ -33,6 +34,8 @@
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.5",
 		"gh-pages": "^6.1.1",
+		"sharp": "^0.33.2",
+		"svgo": "^3.2.0",
 		"typescript": "^5.2.2",
 		"vite": "^5.1.0"
 	}
