--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
+		"react-helmet-async": "^2.0.4",
 		"recoil": "^0.7.7",
 		"recoil-nexus": "^0.5.0",
 		"sass": "^1.70.0",
@@ -26,7 +27,7 @@
 	"devDependencies": {
 		"@types/react": "^18.2.55",
 		"@types/react-dom": "^18.2.19",
-		"@types/react-helmet": "^6.1.11",	
+		"@types/react-helmet": "^6.1.11",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"@vitejs/plugin-react": "^4.2.1",
