--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
 		"@fortawesome/fontawesome-svg-core": "^6.5.1",
 		"@fortawesome/free-solid-svg-icons": "^6.5.1",
 		"@fortawesome/react-fontawesome": "^0.2.0",
-		"react": "^18.3.0-canary-a870b2d54-20240314",
-		"react-dom": "^18.3.0-canary-a870b2d54-20240314",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-helmet": "^6.1.0",
 		"react-helmet-async": "^2.0.4",
 		"recoil": "^0.7.7",
